--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,9 +2,10 @@ name: Scheduled Post Publisher
 
 on:
   schedule:
-    # Every 90 minutes (0:00, 1:30, 3:00, 4:30, 6:00...)
-    - cron: '0 0,3,6,9,12,15,18,21 * * *'
-    - cron: '30 1,4,7,10,13,16,19,22 * * *'
+    # 9:59 KST (0:59 UTC), 12:59 KST (3:59 UTC), 15:59 KST (6:59 UTC), 18:59 KST (9:59 UTC), 21:59 KST (12:59 UTC)
+    - cron: '59 0,3,6,9,12 * * *'
+    # 11:29 KST (2:29 UTC), 14:29 KST (5:29 UTC), 17:29 KST (8:29 UTC), 20:29 KST (11:29 UTC), 23:29 KST (14:29 UTC)
+    - cron: '29 2,5,8,11,14 * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
