--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -14,7 +14,16 @@ jobs:
     steps:
       - name: Trigger Publish Cron
         run: |
-          curl -X GET "${{ secrets.VERCEL_URL }}/api/cron/publish?secret=${{ secrets.CRON_SECRET }}"
+          echo "Calling cron/publish endpoint..."
+          RESPONSE=$(curl -s -w "\nHTTP_STATUS:%{http_code}" "${{ secrets.VERCEL_URL }}/api/cron/publish?secret=${{ secrets.CRON_SECRET }}")
+          HTTP_STATUS=$(echo "$RESPONSE" | grep "HTTP_STATUS" | cut -d: -f2)
+          BODY=$(echo "$RESPONSE" | sed '/HTTP_STATUS/d')
+          echo "Response: $BODY"
+          echo "HTTP Status: $HTTP_STATUS"
+          if [ "$HTTP_STATUS" != "200" ]; then
+            echo "Error: API returned non-200 status"
+            exit 1
+          fi
 
       - name: Trigger Token Refresh (daily at midnight only)
         if: github.event.schedule == '0 0,3,6,9,12,15,18,21 * * *'
