--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-    "crons": [
-        {
-            "path": "/api/cron/publish",
-            "schedule": "* * * * *"
-        },
-        {
-            "path": "/api/cron/refresh-token",
-            "schedule": "0 0 * * *"
-        }
-    ]
+    "framework": "nextjs"
 }
