--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-    "framework": "nextjs"
+    "framework": "nextjs",
+    "crons": [
+        {
+            "path": "/api/cron/publish",
+            "schedule": "0 * * * *"
+        },
+        {
+            "path": "/api/cron/refresh-token",
+            "schedule": "0 0 * * *"
+        }
+    ]
 }
