--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -10,21 +10,24 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Publish Cron
-        run: |
-          echo "Vercel API를 호출합니다..."
-          # -v (verbose) 옵션을 추가하여 연결 문제를 더 잘 파악하게 합니다.
-          RESPONSE=$(curl -v -sL -w "\nHTTP_STATUS:%{http_code}" "${{ secrets.VERCEL_URL }}/api/cron/publish?secret=${{ secrets.CRON_SECRET }}")
-          HTTP_STATUS=$(echo "$RESPONSE" | grep "HTTP_STATUS" | cut -d: -f2)
-          BODY=$(echo "$RESPONSE" | sed '/HTTP_STATUS/d')
-          echo "응답 결과: $BODY"
-          echo "HTTP 상태 코드: $HTTP_STATUS"
-          if [ "$HTTP_STATUS" != "200" ]; then
-            echo "에러: API가 200 응답을 주지 않았습니다. Secrets 설정을 확인해주세요."
-            exit 1
-          fi
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Trigger Token Refresh (매일 UTC 00:00)
-        if: github.event.schedule == '0 0 * * *'
-        run: |
-          curl -s "${{ secrets.VERCEL_URL }}/api/cron/refresh-token?secret=${{ secrets.CRON_SECRET }}"
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Generate Prisma Client
+        run: npx prisma generate
+
+      - name: Run Standalone Publisher
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          THREADS_ACCESS_TOKEN: ${{ secrets.THREADS_ACCESS_TOKEN }}
+          THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
+        run: node scripts/publish-standalone.js
